amun/overlays/test/deploymentconfig.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: amun-api
spec:
  replicas: 1
  selector:
    service: amun-api
    app.kubernetes.io/name: thoth
    app.kubernetes.io/component: amun
    app.kubernetes.io/managed-by: aicoe-thoth-devops
  template:
    metadata:
      labels:
        service: amun-api
        app.kubernetes.io/name: thoth
        app.kubernetes.io/component: amun
        app.kubernetes.io/managed-by: aicoe-thoth-devops
    spec:
      serviceAccountName: amun-api
      containers:
        - name: amun-api
          image: amun-api:test
          env:
            - name: PORT
              value: "8080"
            - name: APP_MODULE
              value: "amun.entrypoint:app"
            - name: KUBERNETES_API_URL
              value: "https://kubernetes.default.svc.cluster.local"
            - name: KUBERNETES_VERIFY_TLS
              value: "0"
            - name: AMUN_DEBUG
              value: "0"
            - name: THOTH_SENTRY_IGNORE_LOGGER
              value: "connexion.decorators.validation"
            - name: THOTH_AMUN_API_URL
              valueFrom:
                configMapKeyRef:
                  name: amun
                  key: amun-api-url
            - name: THOTH_AMUN_INSPECTION_NAMESPACE
              valueFrom:
                configMapKeyRef:
                  name: amun
                  key: inspection-namespace
            - name: THOTH_AMUN_INFRA_NAMESPACE
              valueFrom:
                configMapKeyRef:
                  name: amun
                  key: infra-namespace
            - name: AMUN_API_APP_SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: amun
                  key: app-secret-key
            - name: THOTH_CEPH_BUCKET
              valueFrom:
                configMapKeyRef:
                  key: bucket-name
                  name: ceph
            - name: THOTH_CEPH_BUCKET_PREFIX
              valueFrom:
                configMapKeyRef:
                  key: bucket-prefix
                  name: ceph
            - name: THOTH_S3_ENDPOINT_URL
              valueFrom:
                configMapKeyRef:
                  key: endpoint
                  name: ceph
            - name: THOTH_CEPH_KEY_ID
              valueFrom:
                secretKeyRef:
                  name: ceph
                  key: key-id
            - name: THOTH_CEPH_SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: ceph
                  key: secret-key
            - name: SENTRY_DSN
              valueFrom:
                secretKeyRef:
                  name: amun
                  key: sentry-dsn
            - name: THOTH_DEPLOYMENT_NAME
              valueFrom:
                configMapKeyRef:
                  key: deployment-name
                  name: amun
            - name: THOTH_LOGGING_NO_JSON
              valueFrom:
                configMapKeyRef:
                  name: thoth
                  key: logging-no-json
            - name: PROMETHEUS_PUSHGATEWAY_HOST
              valueFrom:
                configMapKeyRef:
                  key: pushgateway-host
                  name: prometheus
            - name: PROMETHEUS_PUSHGATEWAY_PORT
              valueFrom:
                configMapKeyRef:
                  key: pushgateway-port
                  name: prometheus
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "384Mi"
              cpu: "125m"
            limits:
              memory: "384Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: "/readiness"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: "/liveness"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 10
  test: false
