amun/overlays/test/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: amun-api-route53
spec:
    host: amun.test.thoth-station.ninja
    to:
        kind: Service
        name: amun-api
        weight: 100
    tls:
        termination: ENC[AES256_GCM,data:yjkGrA==,iv:SpU+qozX1gVcHVw5u709PfYWITRMsrqMF5jq3nsetJU=,tag:4GtxfWQd9XdBIgw0U4KuIA==,type:str]
        certificate: ENC[AES256_GCM,data:1t3XmLCfuWmE3S2jY/pf0C5RuCRX+Esbz1hjvc1CrEd1FABO3U9ojmr5d8ekXAlOj9pV9Vm92VFifA59/gabvx4C7kD5BbQD8lZOwWv3MlpqdHIJA/9wBV2fGHvw6zmMrwKqaErbdlHIBq8ZevdpZ8JHCa3EFd8tZEnJp8ViWjoGo64tnny5dkPMOdDbeyUuCvUH+qf28nhijpWoihKmo55Jo6aZJ62uZaWs8PRM4W1DyiCPtQ/+UUxS3pnAi2gd2XmB4R8W66jI0QpG76h/58mYAOv7nkFtOnrEbeQkDtHLhdgWPoY8d0URkQ6W0zW8+eCJMPTy7tK8MApURkZ7QJb/NuGjjGs+q75/HqCmrCtNJe7RHops6Zu2MUc6sHjyXnhDjvZEshVVV1Vfc1hyKuqYlUvY8Jb4konbssgEVoZvOKQIyLBrHQ/OhUenf699HTGFHbnFKrZ [...]
        key: ENC[AES256_GCM,data:y8VucIgXqjT5ixrumBCdDHME+mo7SbDzZiTuy38UY80XFGYaiFzuPSnnen1Q+K1iHgqMa3tED8OE5fSB41NtjAPvb8W+uKS+eps3UUDm1GtWmMGilywAo1nDFgKXidE8Pw9K/kPr4nKjRZkHN8rg3nIXsQad4BQytqo7nXxZYLaG8G26KXkEIJg90jpEAuXfTHg0k3HnA3/d4FMnl3t6j1YnkxgOKMx/VbpyL9ywK7ZfU80DBLfFUV/484BszXXszEiktyq1C8WZDxZvaVEXtJ3OZsaMp1xliSOaUcHx0POI3vC3SEnlgIQIVZP3S2tqLa3HteyI3MCtvH89q+WBRRhFquoh37NEcvdSvb4KN/KXOrUkEEc2RvmZfmZX2kPtDKPJ3FDnJE6s1omUWoSRuIc4hKD2h2MdT9ft9IGbwDKHT6GHnyDpE0V76udfL0TnOgAYfjMLW6bCme47tc2 [...]
        caCertificate: ENC[AES256_GCM,data:TrcOKskjxdUmug+XV/31cVZDDH03iPyPXIzmSMex9tFyvGnzSJMjwAKDpsZpekXpqtT4oI9LruQdet49QQxUTxn6j56BzZmYkMabMJXCZzXa9rO8DZuKA96xThOZ6tH/Q8fiNy9kzZ9EM44oIIV8ocLakqWwbIo1wEfyeIcUmORYxVP9D49BAL9r0VgQ+bcblQaqGIh1+jRvtgZ7k4VplS8UZJnrKIJvKtwV2QPYQrsEiKepPMyqFVc1o9czClurrQ4Y+FlWAxaHHylDpYSuOIOFWYccySA7bd0deMhWJIDI5SYE+jOX0hH4DIrjfwRiRDYndX4iFUlJnDI4saYNJrnwJUiVfLPrFvrJFsNpjjK59pmsykcNpSgkK24wc4lzeg0tJuDToHPHPXVho0iwWvkEMgQmHHqoHpSX54nqkSCunhznX1WwjXNGb1ymnjbWb2HCc5CVy [...]
    wildcardPolicy: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2022-10-05T21:15:26Z"
    mac: ENC[AES256_GCM,data:BNu34l6d3XLI/pHjmZJkOfHS50KulvGvM459AiAFXMknAWPZsBPBy4c+uI0eoBbooEsUGLETX6qUMSMIRc+ab7ZI949shzQkiup1EBX6iNZbHujLe4su+q/y+wi0Ucq1IQibfOpAJdrRSVx+Mvo6BB6CXKeCflrNzBZaIzLNJpg=,iv:ZO+s+/1NZ1UB4n5RdHSLE7ka01IV0aIxEx3705JTdag=,tag:UPPNq66VOo3RvQqpDMoQTw==,type:str]
    pgp:
        - created_at: "2022-10-05T21:15:25Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA1gbAjViyxWYAQ/+Ij9vfA/OC/0CZpf8xhGz1ZmsNYabJxnAOV5UNlZMiKjL
[...]
            SNfl9m8Y9xQzWe+b7eJ78uF67OKCDaT/gslE2NLcVYQNbw==
            =1Qk3
            -----END PGP MESSAGE-----
          fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
        - created_at: "2022-10-05T21:15:25Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcBMA+/WpawS9RPbAQf/RAPBgK66FtVB3URmfzthX71rFOzkYitrFRTMcsrRSH1b
[...]
            hLV8fpy2fNz8Qr5O8mrcWJch
            =XUI1
            -----END PGP MESSAGE-----
          fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
        - created_at: "2022-10-05T21:15:25Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQgAketSrQZ+46nTi+ea2mAe/eQXdnSlU0g9r858C6hBTAsN
[...]
            MgFoHqUDjXBp51pYvRnvEWqK2rcp9eEh/qmoxu4=
            =XhIg
            -----END PGP MESSAGE-----
          fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
        - created_at: "2022-10-05T21:15:25Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA9aKBcudqifiAQ//YfmkhhC8X/V447aoa7gNATp4XikpykVBjavitUyHDXzx
[...]
            2lxln9WDJejiPZaO908+KLEj+kxyotrtx9HisqWidt7iHg==
            =bLfm
            -----END PGP MESSAGE-----
          fp: 0508677DD04952D06A943D5B4DC4116D360E3276
        - created_at: "2022-10-05T21:15:25Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFOA9LRbhPydJmLEAf/RZIbRsGb+2yPhP9lEw0EaVEmGwirdC8cIOlwW/YFJ+SG
[...]
            v7qDPlpkGXkS1dE3F43WE/a0cUvqVG7N9gx7GN4SpCIHMnMk
            =ML0I
            -----END PGP MESSAGE-----
          fp: 8D191B7544E9CCC3547B25A877E5A5B31D13A647
        - created_at: "2022-10-05T21:15:25Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA9NBwWNwg7uAAQ/+Lq8+BeZXa7fzDElyoYJrgAQIsia3JvlwCgGnPaECnhGK
[...]
            UE9AnHjW4arQd4X15B7zSS8u6z4/RcvmdLX34qTf7E59Pw==
            =VYkd
            -----END PGP MESSAGE-----
          fp: A01778ACB7CC4D41B00FDD78CCBE624D8FF6D016
        - created_at: "2022-10-05T21:15:25Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAxdcElc1DYwyAQ//RQw1bzFMp5EnDMQtRt3S7x9yfCkgOxeVwz9Gae6Oi7ZE
[...]
            =fw7R
            -----END PGP MESSAGE-----
          fp: CEBD171D5C7B1C5FB960301167AC891FB1FDF3E4
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.7.3
